fix alignment of stuff

--- a/src/pages/commands/index.styl
+++ b/src/pages/commands/index.styl
@@ -94,8 +94,6 @@ page-body
   box-shadow: -5px 0 10px var(--color-box-shadow)
   position: relative
   z-index: 2
-  display: flex
-  justify-content: center
 
 .commands-home
   display: flex
